--- a/public/login.html
+++ b/public/login.html
@@ -15,29 +15,57 @@
     </div>
 
     <div class="row">
-        <div class="col-sm-12" ng-include="'views/nav.html'">
+        <div class="col-sm-12">
+            <div class="col-sm-6">
+                <form class="form-horizontal" action="/login" method="POST">
+                    <h2>Log In</h2>
+                    <div class="row form-group">
+                        <label for="username" class="control-label col-sm-2">Username:</label>
+                        <div class="col-sm-8">
+                          <input type="text" name="username" class="form-control" required />
+                        </div>
+                    </div>
+                    <div class="row form-group">
+                        <label for="password" class="control-label col-sm-2">Password:</label>
+                        <div class="col-sm-8">
+                            <input type="password" name="password" class="form-control" required />
+                        </div>
+                    </div>
+                    <div class="row form-group">
+                        <div class="col-sm-offset-2 col-sm-10">
+                            <button class="btn btn-primary">Log In</button>
+                        </div>
+                    </div>
+
+                </form>
+            </div>
+
+            <div class="col-sm-6">
+                <form class="form-horizontal" action="/register" method="POST">
+                    <h2>Sign Up</h2>
+                    <div class="row form-group">
+                        <label for="username" class="control-label col-sm-2">Username:</label>
+                        <div class="col-sm-8">
+                            <input type="text" name="username" class="form-control" required />
+                        </div>
+                    </div>
+                    <div class="row form-group">
+                        <label for="password" class="control-label col-sm-2">Password:</label>
+                        <div class="col-sm-8">
+                            <input type="password" name="password" class="form-control" required />
+                        </div>
+                    </div>
+                    <div class="row form-group">
+                        <div class="col-sm-offset-2 col-sm-10">
+                            <button class="btn btn-primary">Sign Up</button>
+                        </div>
+                    </div>
+
+                </form>
+            </div>
 
         </div>
     </div>
-
-    <div class="row">
-        <div class="col-sm-12" ng-view></div>
-    </div>
 </div>
-<script src="lib/jquery/dist/jquery.min.js"></script>
-<script src="lib/bootstrap/dist/js/bootstrap.min.js"></script>
-<script src="lib/angular/angular.min.js"></script>
-<script src="lib/angular-route/angular-route.min.js"></script>
-<script src="lib/angular-resource/angular-resource.min.js"></script>
-<script src="lib/angular-messages/angular-messages.min.js"></script>
-
-
-<script src="src/app.js"></script>
-<script src="src/controllers.js"></script>
-<script src="src/factories.js"></script>
-<script src="src/filter.js"></script>
-<script src="src/directives.js"></script>
-
-
 </body>
 </html>
